About page css completed, minor about HTML tweaks re classes.

--- a/about.html
+++ b/about.html
@@ -27,13 +27,13 @@
           <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
       </div>
       <div class="MiddleTable">
-        <div class="MiddleContent">
+        <div class="MiddleContent TopBox">
           <img src="img/about-plan.png" alt="strategy">
           <h3>Strategy</h3>
           <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <button class="LearnMore">Learn More</button>
         </div>
-        <div class="MiddleContent">
+        <div class="MiddleContent TopBox">
             <img src="img/about-working.png" alt="strategy">
             <h3>How We Work</h3>
             <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
