--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <a href="#">About</a>
         <a href="#">Products</a>
         <a href="#">Blog</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <img src="img/jumbo-about.png" alt="JumboAbt" class= "LineBrkImg">
     <div class="container about-page">
@@ -62,7 +62,7 @@
           <a href="#">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
-          <a href="#">Contact</a>
+          <a href="contact.html">Contact</a>
         </nav>
       </footer>
     </div><!-- container -->        
