--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="about.html">About</a>
         <a href="#">Products</a>
         <a href="#">Blog</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <img src="img/jumbo.jpg" alt="Jumbo" class= "LineBrkImg">
     <div class="container">
@@ -76,7 +76,7 @@
                 <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </footer>
     </div><!-- container -->        
