--- a/contact.html
+++ b/contact.html
@@ -20,20 +20,26 @@
         <a href="#">Blog</a>
         <a href="#">Contact</a>
     </nav>
-    <div>
-        <h1>We'd love to hear from you!</h1>
-        <p>Please fill out the form below, and we will get back to you as soon as possible.</p>
+    <div class="TopContent">
+        <h1>Contact</h1>
+        <p>We would love to hear from you! Please fill out the form below, and we will get back to you as soon as possible.</p>
     </div>
-    <form>
-        First Name:<br>
-        <input type="text" name="FirstName"><br>
-        Last Name:<br>
-        <input type="text" name="LastName"><br>
-        Email:<br>
-        <input type="text" name="Email"><br>
-        Message:<br>
-        <input type="text" name="Message"><br>
-
+    <form action="/contact.php" method="post">
+        <div>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name">
+        </div>
+        <div>
+            <label for="mail">E-mail:</label>
+            <input type="email" id="mail" name="user_mail">
+        </div>
+        <div>
+            <label for="msg">Message:</label>
+            <textarea id="msg" name="user_message"></textarea>
+        </div>
+        <div class="button">
+            <button type="submit">Send your message</button>
+        </div>
     </form>
 
 
