Fixing top lambda image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <img src="C:\Users\milae\Documents\Programming\Lambda-Projects\Sprint-Challenge--User-Interface\img\lambda-black.png" alt="LambdaBlack" id="NavImg">
+        <img src="img/lambda-black.png" alt="LambdaBlack" id="NavImg">
         <a href="#">Home</a>
         <a href="about.html">About</a>
         <a href="#">Products</a>
